realtime 화면 갱신 계약을 화면 단위로 단순화한다 (#95)